kubernetes/argocd/main-cluster/manifests/home-assistant-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-2
  namespace: home-assistant-2
spec:
  type: ClusterIP
  selector:
    app: home-assistant-2
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
