kubernetes/argocd/main-cluster/manifests/home-assistant-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-2
  namespace: home-assistant-2
spec:
  rules:
    - host: home-assistant.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-2
                port:
                  number: 80
